[gd_scene load_steps=3 format=2]

[ext_resource path="res://Quest_window.gd" type="Script" id=1]
[ext_resource path="res://Config/Quest_window/QuestList.gd" type="Script" id=2]

[node name="Quest_window" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="AllQuest" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.133333, 0.270588, 0.392157, 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="name" type="Node2D" parent="AllQuest"]
position = Vector2( 10, 10 )

[node name="name" type="ColorRect" parent="AllQuest/name"]
margin_left = -2.0
margin_top = -8.0
margin_right = 494.0
margin_bottom = 35.0
color = Color( 0.780392, 0.780392, 0.780392, 1 )

[node name="name1" type="ColorRect" parent="AllQuest/name"]
margin_left = 2.0
margin_top = -4.0
margin_right = 490.0
margin_bottom = 32.0
color = Color( 0, 0.129412, 0.329412, 1 )

[node name="place_fotQuest" type="Node2D" parent="AllQuest"]
position = Vector2( 10, 10 )

[node name="place_forQuest" type="ColorRect" parent="AllQuest/place_fotQuest"]
margin_top = 73.0
margin_right = 220.0
margin_bottom = 299.0

[node name="place_forQuest2" type="ColorRect" parent="AllQuest/place_fotQuest"]
margin_left = 2.0
margin_top = 76.0
margin_right = 218.0
margin_bottom = 297.0
color = Color( 0, 0.129412, 0.329412, 1 )

[node name="switcher" type="HBoxContainer" parent="AllQuest"]
margin_left = 16.0
margin_top = 51.0
margin_right = 628.0
margin_bottom = 77.0
custom_constants/separation = 40

[node name="ActiveButton" type="Button" parent="AllQuest/switcher"]
margin_right = 220.0
margin_bottom = 26.0
rect_min_size = Vector2( 220, 0 )

[node name="Label" type="Label" parent="AllQuest/switcher/ActiveButton"]
margin_top = 2.0
margin_right = 175.0
margin_bottom = 27.0
text = "Active"
align = 1
valign = 1

[node name="CompleteButton" type="Button" parent="AllQuest/switcher"]
margin_left = 260.0
margin_right = 480.0
margin_bottom = 26.0
rect_min_size = Vector2( 220, 0 )

[node name="Label" type="Label" parent="AllQuest/switcher/CompleteButton"]
margin_right = 178.0
margin_bottom = 27.0
text = "Complete"
align = 1
valign = 1

[node name="Active" type="ScrollContainer" parent="AllQuest"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 14.0
margin_top = 88.0
margin_right = -412.0
margin_bottom = -14.0

[node name="ActiveContainer" type="VBoxContainer" parent="AllQuest/Active"]
margin_right = 212.0
margin_bottom = 220.0
rect_min_size = Vector2( 212, 220 )
script = ExtResource( 2 )

[node name="Complete" type="ScrollContainer" parent="AllQuest"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 14.0
margin_top = 88.0
margin_right = -412.0
margin_bottom = -14.0

[node name="CompleteContainer" type="VBoxContainer" parent="AllQuest/Complete"]
margin_right = 212.0
margin_bottom = 220.0
rect_min_size = Vector2( 212, 220 )
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="AllQuest"]
anchor_left = 0.6
anchor_top = 0.351
anchor_right = 0.692
anchor_bottom = 0.5
margin_left = -139.0
margin_top = -25.32
margin_right = 182.12
margin_bottom = 148.0

[node name="Description" type="Label" parent="AllQuest/Panel"]
margin_left = 6.0
margin_top = 8.0
margin_right = 374.0
margin_bottom = 210.0

[node name="SmallWindow2" type="ColorRect" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.662745 )
self_modulate = Color( 1, 1, 1, 0.745098 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -340.0
margin_bottom = -245.0
color = Color( 0.545098, 0.509804, 0.509804, 1 )

[node name="quest" type="Label" parent="SmallWindow2"]
anchor_right = 1.0
margin_left = 20.0
margin_top = 12.0
margin_bottom = 76.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/line_spacing = 5
custom_constants/shadow_offset_y = 1
align = 1

[connection signal="pressed" from="AllQuest/switcher/ActiveButton" to="." method="_on_ActiveButton_pressed"]
[connection signal="pressed" from="AllQuest/switcher/CompleteButton" to="." method="_on_CompleteButton_pressed"]
